[#394] Don't use generics when marshalling collections
* A temporary workaround for the issue. Full support for generic
  parameter types will need to be added to type mirroring